--- a/src/main/css/style.css
+++ b/src/main/css/style.css
@@ -296,27 +296,26 @@ body {
     text-decoration: none;
 }
 
-.our-services__nav__item:active{
-    background-color: red;
-}
 
 .our-services__description{
     width: 1142px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    position: relative;
 }
 .our-services__description__img{
     display: inline-block;
+    width: 192px;
+    height: 138px;
     border: 0.5px solid rgb(236, 240, 241);
 }
 .our-services__description p{
     display: inline-block;
+    position: absolute;
     width: 927px;
     color: #777777;
     font-size: 14px;
     line-height: 1.8;
     text-align: justify;
+    padding-left: 24px ;
 
 }
 
@@ -420,10 +419,57 @@ body {
 
 .breaking-news__gallery{
     width: 100%;
-    height: 500px;
-    border: 1px solid green;
     margin-top: 70px;
     margin-bottom: 70px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.breaking-news__gallery__item{
+    position: relative;
+    width: 263px;
+    height: 280px;
+    margin: 22px 0;
+    background-color: rgb(248, 252, 254);
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2);
+}
+
+.breaking-news__gallery__item a{
+    position: absolute;
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
+
+.breaking-news__gallery__item p{
+    display: block;
+    font-size: 18px;
+    color: #777777;
+    font-weight: bold;
+    padding-top: 10px;
+    padding-left: 13px;
+}
+
+.breaking-news__gallery__item p:last-of-type{
+    font-size: 14px;
+    font-weight: 300;
+}
+
+.breaking-news__gallery__item__date {
+    position: absolute;
+    background-color: rgb(26, 60, 53);
+    width: 68px;
+    height: 68px;
+    text-align: center;
+    top: 0;
+    right: 0;
+    font-size: 16px;
+    color: #ffffff;
+    line-height: 2;
 }
 
 .what-people-say{
@@ -499,5 +545,53 @@ body {
     align-items: center;
     justify-content: center;
 }
+
+.hide {
+    display: none;
+}
+.show {
+    display: block;
+}
+.item-active{
+    background-color: rgb(17, 208, 172);
+    position: relative;
+    color: white;
+}
+.item-active::after{
+    content: "";
+    position: absolute;
+    bottom: -14px;
+    left: 75px;
+    border-left: 15px solid transparent;
+    border-right: 15px solid transparent;
+    border-top: 15px solid rgb(17, 208, 172);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
