--- a/src/main/css/style.css
+++ b/src/main/css/style.css
@@ -585,10 +585,13 @@ body {
     background-image: url("../img/people_img/nextArrow.png");
 }
 
+/*.slick-current{*/
+    /*border: 1px solid rgb(17, 208, 172);*/
+/*}*/
 /***************************************************************************************/
 
 .gallery-of-best-images .container {
-    height: 1366px;
+    /*height: 1366px;*/
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -687,13 +690,41 @@ input, .social-media__btn {
     text-decoration: none;
 }
 
-input:hover, .social-media__btn:hover {
-    opacity: 1;
+.social-media__btn {
+    padding-left: 97px;
+    position: relative;
+
 }
+
+/*.social-media__btn::before {*/
+    /*content: "";*/
+    /*position: absolute;*/
+    /*width: 64px;*/
+    /*height: 46px;*/
+    /*top: -1px;*/
+    /*left: -1px;*/
+    /*border-radius: 4px;*/
+
+/*}*/
 
 .fb {
     background-color: rgb(50, 78, 137);
     color: white;
+    position: relative;
+}
+
+.fb::before {
+    content: "";
+    position: absolute;
+    width: 64px;
+    height: 44px;
+    top: 0;
+    left: 0;
+    border-radius: 4px;
+    background-color: rgb(56, 88, 153);
+    background-image: url("../img/modal/facebook.png");
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .twitter {
@@ -701,9 +732,37 @@ input:hover, .social-media__btn:hover {
     color: white;
 }
 
+.twitter::before {
+    content: "";
+    position: absolute;
+    width: 64px;
+    height: 44px;
+    top: 0;
+    left: 0;
+    border-radius: 4px;
+    background-color: rgb(67, 177, 228);
+    background-image: url("../img/modal/twitter.png");
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
 .google {
     background-color: rgb(207, 60, 33);
     color: white;
+}
+
+.google::before {
+    content: "";
+    position: absolute;
+    width: 64px;
+    height: 44px;
+    top: 0;
+    left: 0px;
+    border-radius: 4px;
+    background-color: rgb(223, 75, 49);
+    background-image: url("../img/modal/google.png");
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 input[type=submit] {
@@ -718,6 +777,7 @@ input[type=submit]:hover {
 }
 
 input[type=checkbox] {
+    /*display: none;*/
     width: 10%;
     font-size: 15px;
 }
